--- a/final_template.html
+++ b/final_template.html
@@ -4,6 +4,7 @@
         <div class="col-xs-12">
     		<div class="invoice-title">
     			<h2>Invoice</h2><h3 class="pull-right">Invoice #{{invno}}</h3>
+				<p><strong>VAC: </strong>{{vac}}</p>
     		</div>
     		<hr>
     		<div class="row">
